crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__compare__missing_rhs_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/compare/missing_rhs_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..15,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 0..8,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                IsNot,
                            ],
                            comparators: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 8..8,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                            identity_ops: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 10..15,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 10..15,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 10..11,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 14..15,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x is not
  |         ^ Syntax Error: Expected an expression
2 |
3 | 1 + 2
  |
