crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__compare__named_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/compare/named_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..31,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 0..10,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                NotIn,
                            ],
                            comparators: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 9..10,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            identity_ops: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 14..20,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 14..20,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 15..16,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 18..19,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                            is_anon_named_tuple: false,
                            is_anon_named_tuple_value: false,
                            callable_shape: None,
                            is_parameter_shape: false,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 21..26,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 21..26,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 21..22,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                Gt,
                            ],
                            comparators: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 25..26,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            identity_ops: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 30..31,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 30..31,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x not in y := (1, 2)
  |            ^^ Syntax Error: Expected a statement
2 | x > y := 2
  |


  |
1 | x not in y := (1, 2)
2 | x > y := 2
  |       ^^ Syntax Error: Expected a statement
